--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                         <h3 class="useful__subtitle">Як пережити втрату близького</h3>
                         <div class="useful__block">
                             <p class="useful__desc">Втрата близької людини – це одне із найважчих випробувань, з
-                                предметами
+                                якими
                                 може зіткнутися людина. Це може бути член сім'ї, друг чи колега по роботі, і незалежно
                                 від
                                 того, який був зв'язок, втрата може залишити людину в стані глибокого горя та болю...
