--- a/ru/index.html
+++ b/ru/index.html
@@ -489,7 +489,7 @@
                         <h3 class="useful__subtitle">Как пережить потерю близкого</h3>
                         <div class="useful__block">
                             <p class="useful__desc">Потеря близкого человека – это одно из самых трудных испытаний, с
-                                предметами может столкнуться человек. Это может быть член семьи, друг или коллега по
+                                какими может столкнуться человек. Это может быть член семьи, друг или коллега по
                                 работе, и независимо от того, какая была связь, потеря может оставить человека в
                                 состоянии глубокого горя и боли.
                             </p>
