--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ритуальні послуги</title>
-    <meta name="description" content="Агентство ритуальних послуг 'Rustrans'">
+    <meta name="description"
+        content="Ритуальні послуги у важкий момент. Довірте нам дбайливу опіку про всі деталі та організацію похорону. Зверніться до нас сьогодні, щоб дізнатися більше.">
     <link rel="icon" sizes="any" type="image/svg+xml" href="./img/favicons/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -523,10 +524,6 @@
             <div class="container">
                 <h2 class="contact__title">Контакти</h2>
                 <div class="contact__content">
-                    <div class="contact__phone">
-                        <p>Телефон для зв'язку</p>
-                        <a href="tel:0960808868">0960808868</a>
-                    </div>
                     <form class="contact__form" id="form_4">
                         <input type="hidden" name="form_name" value="form_4">
                         <input class="contact__input" type="text" name="name" placeholder="Ваше ім'я" required>
@@ -534,6 +531,10 @@
                             minlength="8" maxlength="15">
                         <button type="submit" class="contact__submit">Зв'язатися зі мною</button>
                     </form>
+                    <div class="contact__phone">
+                        <p>Телефон для зв'язку</p>
+                        <a href="tel:0960808868">0960808868</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -837,6 +838,8 @@
     </div>
 
     <div class="thanks js-thanks">
+        <button class="thanks__close js-thanks-close"><img src="img/icons/close.svg" alt="close-icon" width="50"
+                height="50"></button>
         <p class="thanks__title">Дякуємо!</p>
         <p class="thanks__text">Ми отримали заявку та зв’яжемось з вами найближчим часом</p>
     </div>
