--- a/ru/index.html
+++ b/ru/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ритуальные услуги</title>
-    <meta name="description" content="Агентство ритуальных услуг 'Rustrans'">
+    <meta name="description"
+        content="Ритуальные услуги в трудный момент. Доверьте нам заботу обо всех деталях и организации похорон. Свяжитесь с нами сегодня, чтобы узнать больше.">
     <link rel="icon" sizes="any" type="image/svg+xml" href="../img/favicons/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -520,10 +521,6 @@
             <div class="container">
                 <h2 class="contact__title">Контакты</h2>
                 <div class="contact__content">
-                    <div class="contact__phone">
-                        <p>Телефон для связи</p>
-                        <a href="tel:0960808868">0960808868</a>
-                    </div>
                     <form class="contact__form" id="form_4">
                         <input type="hidden" name="form_name" value="form_4">
                         <input class="contact__input" type="text" name="name" placeholder="Ваше имя" required>
@@ -531,6 +528,10 @@
                             minlength="8" maxlength="15">
                         <button type="submit" class="contact__submit">Связаться со мной</button>
                     </form>
+                    <div class="contact__phone">
+                        <p>Телефон для связи</p>
+                        <a href="tel:0960808868">0960808868</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -829,6 +830,8 @@
     </div>
 
     <div class="thanks js-thanks">
+        <button class="thanks__close js-thanks-close"><img src="img/icons/close.svg" alt="close-icon" width="50"
+                height="50"></button>
         <p class="thanks__title">Благодарим!</p>
         <p class="thanks__text">Мы получили заявку и свяжемся с вами в ближайшее время</p>
     </div>
