--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <p class="service__desc">Виберіть необхідну послугу</p>
                 <ul class="service__list">
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-1">
                             <div class="service__info">
                                 <span class="service__number">01</span>
                                 <h3 class="service__subtitle">Допомога на місці (виїзд консультанта на дом)</h3>
@@ -164,7 +164,7 @@
                         </button>
                     </li>
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-2">
                             <div class="service__info">
                                 <span class="service__number">02</span>
                                 <h3 class="service__subtitle">З дому до моргу</h3>
@@ -244,7 +244,7 @@
                         </button>
                     </li>
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-3">
                             <div class="service__info">
                                 <span class="service__number">03</span>
                                 <h3 class="service__subtitle">З моргу до крематорію</h3>
@@ -321,7 +321,7 @@
                         </button>
                     </li>
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-4">
                             <div class="service__info">
                                 <span class="service__number">04</span>
                                 <h3 class="service__subtitle">З моргу на кладовище</h3>
@@ -408,7 +408,7 @@
                         </button>
                     </li>
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-5">
                             <div class="service__info">
                                 <span class="service__number">05</span>
                                 <h3 class="service__subtitle">З моргу за кордон</h3>
