--- a/ru/index.html
+++ b/ru/index.html
@@ -129,7 +129,7 @@
                 <p class="service__desc">Выберите необходимую услугу</p>
                 <ul class="service__list">
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-1">
                             <div class="service__info">
                                 <span class="service__number">01</span>
                                 <h3 class="service__subtitle">Помощь на месте (выезд консультанта на дом)</h3>
@@ -163,7 +163,7 @@
                         </button>
                     </li>
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-2">
                             <div class="service__info">
                                 <span class="service__number">02</span>
                                 <h3 class="service__subtitle">Из дома в морг</h3>
@@ -243,7 +243,7 @@
                         </button>
                     </li>
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-3">
                             <div class="service__info">
                                 <span class="service__number">03</span>
                                 <h3 class="service__subtitle">Из морга в крематорий</h3>
@@ -320,7 +320,7 @@
                         </button>
                     </li>
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-4">
                             <div class="service__info">
                                 <span class="service__number">04</span>
                                 <h3 class="service__subtitle">С морга на кладбище</h3>
@@ -407,7 +407,7 @@
                         </button>
                     </li>
                     <li class="service__item">
-                        <button class="service__button">
+                        <button class="service__button js-calc-5">
                             <div class="service__info">
                                 <span class="service__number">05</span>
                                 <h3 class="service__subtitle">Из морга за границу</h3>
@@ -830,7 +830,7 @@
     </div>
 
     <div class="thanks js-thanks">
-        <button class="thanks__close js-thanks-close"><img src="img/icons/close.svg" alt="close-icon" width="50"
+        <button class="thanks__close js-thanks-close"><img src="../img/icons/close.svg" alt="close-icon" width="50"
                 height="50"></button>
         <p class="thanks__title">Благодарим!</p>
         <p class="thanks__text">Мы получили заявку и свяжемся с вами в ближайшее время</p>
